plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'checkstyle'
}

group = 'com.hyperflex'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

checkstyle {
    ignoreFailures = false
    maxErrors = 0
    toolVersion = "10.26.1"
    configFile = rootProject.file("checkstyle/checkstyle.xml")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    //Dev dependencies
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //elastic
    implementation 'co.elastic.clients:elasticsearch-java:8.18.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
}

bootJar {
    // Include Vite build output in the final Spring Boot JAR
    dependsOn ':frontend:build'
    from("../frontend/build/client") {
        into "BOOT-INF/classes/static" // Place files in Spring Boot's static directory
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.clean.dependsOn ':frontend:clean'
tasks.build.dependsOn ':frontend:build'
